// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Buttons Disabled Link 1`] = `
<button
  className="bg-primary-500 hover:bg-primary-400 py-2 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
  disabled={true}
  href="/"
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Disabled Link
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Primary 1`] = `
<button
  className="bg-primary-500 hover:bg-primary-400 py-2 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Primary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Primary Disabled 1`] = `
<button
  className="bg-primary-500 hover:bg-primary-400 py-2 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
  disabled={true}
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Primary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Primary Icon 1`] = `
<button
  className="bg-primary-500 hover:bg-primary-400 py-2 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
>
  <div
    style={
      Object {
        "height": undefined,
        "width": 12,
      }
    }
  />
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Primary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Primary Link 1`] = `
<a
  className="bg-primary-500 hover:bg-primary-400 py-2 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
  href="/"
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Primary Link
  </span>
</a>
`;

exports[`Storyshots Components/Elements/Buttons Secondary 1`] = `
<button
  className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-1.75 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Secondary Disabled 1`] = `
<button
  className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-1.75 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
  disabled={true}
>
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Secondary Icon 1`] = `
<button
  className="bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-1.75 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
>
  <div
    style={
      Object {
        "height": undefined,
        "width": 12,
      }
    }
  />
  <span
    className="text-bold-caption-200 pt-0.75 leading-3"
  >
    Secondary
  </span>
</button>
`;

exports[`Storyshots Components/Elements/Buttons Text 1`] = `
<button
  className="flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
>
  <span
    className="text-bold-body-300"
  >
    Text
  </span>
</button>
`;
